# voice-picker

./: .gitignore  AGENTS.md  README.md  TEST-SUMMARY.md  index.html  package-lock.json  package.json  test-report.md  test.html  test_backend.sh  test_hotkey.sh  test_shortcut.sh  test_shortcut_complete.sh  test_tts.sh  test_voicepicker.sh  vite.config.ts
docs/plans/: audio-playback-control-plan.md
python/: requirements.txt  tts_server.py  tts_service.py
scripts/: download_model.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: clipboard.rs  hotkey.rs  lib.rs  main.rs
src-tauri/src/audio/: manager.rs  mod.rs  player.rs
src-tauri/src/config/: settings.rs
src-tauri/src/tts/: engine.rs
src/components/: AudioPlayerWindow.vue  HistoryList.vue  PlayerControls.vue  SettingsPanel.vue  StatusIndicator.vue
src/composables/: useAudioPlayer.ts
