[package]
name = "voice-picker"
version = "0.1.0"
edition = "2021"

[lib]
name = "voice_picker_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
rodio = "0.17"
cpal = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4"
dirs = "5.0"
base64 = "0.21"
once_cell = "1.19"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
